--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "./build/homerun.prod.js",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^4.2.1",
+    "css-loader": "^4.2.2",
     "dotenv-webpack": "^2.0.0",
+    "html-loader": "^1.3.0",
     "lodash.template": "^4.5.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
